Fixed Scrollbar pt.2?

--- a/src/css/hnc_information.scss
+++ b/src/css/hnc_information.scss
@@ -101,7 +101,7 @@
 }
 #hncCardContainer::-webkit-scrollbar {
   -webkit-appearance: none;
-  width: 2px;
+  width: 0px;
   height: 0px;
   box-shadow: inset 2px 2px 2px rgb(195, 255, 215);
   background-color: rgb(195, 196, 255);
