--- a/src/css/hnc_loading.scss
+++ b/src/css/hnc_loading.scss
@@ -3,7 +3,8 @@
   width: 100vw; */
   /* display: block; */
   /* background-color: royalblue; */
-
+  height: 100vh;
+  width: 100vw;
   #styledLoadingContainer {
     overflow: visible;
   }
